Make BidiOrder linear and avoid allocations on LTR text
Assisted-by: grok-build:grok-4.6